--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>chrome-driver-holder</artifactId>
             <version>2.38</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -24,6 +29,11 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
             </plugin>
         </plugins>
     </build>
